load("@bazel-erlang//:xref.bzl", "xref")
load("@bazel-erlang//:dialyze.bzl", "dialyze")
load(
    "//:rabbitmq.bzl",
    "RABBITMQ_DIALYZER_OPTS",
    "assert_suites",
    "broker_for_integration_suites",
    "rabbitmq_integration_suite",
    "rabbitmq_lib",
)

APP_NAME = "rabbitmq_prometheus"

APP_MODULE = "rabbit_prometheus_app"

APP_ENV = """[
	{return_per_object_metrics, false}
]"""

BUILD_DEPS = [
    "//apps/amqp_client:bazel_erlang_lib",
    "//apps/rabbit_common:bazel_erlang_lib",
]

DEPS = [
    "@prometheus//:bazel_erlang_lib",
]

RUNTIME_DEPS = [
    "//apps/rabbit:bazel_erlang_lib",
    "//apps/rabbitmq_management_agent:bazel_erlang_lib",
    "//apps/rabbitmq_web_dispatch:bazel_erlang_lib",
    "@accept//:bazel_erlang_lib",
]

rabbitmq_lib(
    app_module = APP_MODULE,
    app_name = APP_NAME,
    build_deps = BUILD_DEPS,
    runtime_deps = RUNTIME_DEPS,
    deps = DEPS,
)

xref(tags = ["xref"])

dialyze(
    dialyzer_opts = RABBITMQ_DIALYZER_OPTS,
    plt = "//:base_plt",
    tags = ["dialyze"],
)

broker_for_integration_suites()

PACKAGE = "apps/rabbitmq_prometheus"

suites = [
    rabbitmq_integration_suite(
        PACKAGE,
        name = "config_schema_SUITE",
        size = "small",
    ),
    rabbitmq_integration_suite(
        PACKAGE,
        name = "rabbit_prometheus_http_SUITE",
        size = "medium",
        flaky = True,
    ),
]

assert_suites(
    suites,
    glob(["test/**/*_SUITE.erl"]),
)
