load("@bazel-erlang//:xref.bzl", "xref")
load("@bazel-erlang//:dialyze.bzl", "dialyze")
load(
    "//:rabbitmq.bzl",
    "RABBITMQ_DIALYZER_OPTS",
    "assert_suites",
    "broker_for_integration_suites",
    "rabbitmq_integration_suite",
    "rabbitmq_lib",
)

APP_NAME = "rabbitmq_sharding"

APP_DESCRIPTION = "RabbitMQ Sharding Plugin"

DEPS = [
    "//apps/rabbit:bazel_erlang_lib",
    "//apps/rabbit_common:bazel_erlang_lib",
]

rabbitmq_lib(
    app_description = APP_DESCRIPTION,
    app_name = APP_NAME,
    deps = DEPS,
)

xref(tags = ["xref"])

dialyze(
    dialyzer_opts = RABBITMQ_DIALYZER_OPTS,
    plt = "//:base_plt",
    tags = ["dialyze"],
)

broker_for_integration_suites()

PACKAGE = "apps/rabbitmq_sharding"

suites = [
    rabbitmq_integration_suite(
        PACKAGE,
        name = "rabbit_hash_exchange_SUITE",
    ),
    rabbitmq_integration_suite(
        PACKAGE,
        name = "rabbit_sharding_SUITE",
        deps = [
            "//apps/rabbit:bazel_erlang_lib",
        ],
    ),
]

assert_suites(
    suites,
    glob(["test/**/*_SUITE.erl"]),
)
