load("@bazel-erlang//:xref.bzl", "xref")
load("@bazel-erlang//:dialyze.bzl", "dialyze")
load(
    "//:rabbitmq.bzl",
    "RABBITMQ_DIALYZER_OPTS",
    "rabbitmq_lib",
)

APP_NAME = "rabbitmq_top"

APP_DESCRIPTION = "RabbitMQ Top"

APP_MODULE = "rabbit_top_app"

BUILD_DEPS = [
    "//apps/rabbitmq_management_agent:bazel_erlang_lib",
]

DEPS = [
    "//apps/amqp_client:bazel_erlang_lib",
    "//apps/rabbit_common:bazel_erlang_lib",
    "//apps/rabbitmq_management:bazel_erlang_lib",
]

RUNTIME_DEPS = [
    "//apps/rabbit:bazel_erlang_lib",
]

rabbitmq_lib(
    app_description = APP_DESCRIPTION,
    app_module = APP_MODULE,
    app_name = APP_NAME,
    build_deps = BUILD_DEPS,
    runtime_deps = RUNTIME_DEPS,
    deps = DEPS,
)

xref(tags = ["xref"])

dialyze(
    dialyzer_opts = RABBITMQ_DIALYZER_OPTS,
    plt = "//:base_plt",
    tags = ["dialyze"],
)
