load(
    "//bazel/elixir:elixir.bzl",
    "elixir_toolchain_external",
    "elixir_toolchain_from_github_release",
)

elixir_toolchain_external()

elixir_toolchain_from_github_release(
    name_suffix = "_1_10",
    sha256 = "8518c78f43fe36315dbe0d623823c2c1b7a025c114f3f4adbb48e04ef63f1d9f",
    version = "1.10.4",
)

elixir_toolchain_from_github_release(
    name_suffix = "_1_12",
    sha256 = "c5affa97defafa1fd89c81656464d61da8f76ccfec2ea80c8a528decd5cb04ad",
    version = "1.12.3",
)

elixir_toolchain_from_github_release(
    name_suffix = "_1_13",
    sha256 = "95daf2dd3052e6ca7d4d849457eaaba09de52d65ca38d6933c65bc1cdf6b8579",
    version = "1.13.4",
)

elixir_toolchain_from_github_release(
    name_suffix = "_1_14",
    sha256 = "ac129e266a1e04cdc389551843ec3dbdf36086bb2174d3d7e7936e820735003b",
    version = "1.14.0",
)
